--- a/styles/light.css
+++ b/styles/light.css
@@ -4,9 +4,171 @@
   переключая тему
 */
 
-.page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+.theme_light.page {
+  --bg-color: #353430;
+  --text-color: #f1b2ce;
+  --accent-text-color: #000028;
+  --accent-color-light-theme: #353430;
+  --accent-color: #ff8dcb;
+  --accent-color-title: #ffc2e6;
+  background-image: url(../images/cover-image-light.png);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--accent-color-light-theme);
+  outline: none;
+}
+
+.theme_light h3.title-decor {
+  color: var(--accent-color-light-theme);
+  background-color: transparent;
+}
+
+.theme_light p.title-decor {
+  color: var(--accent-color-light-theme);
+  font-weight: var(--main-font-weight);
+}
+
+.theme_light .accent_link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.theme_light .accent_link:hover {
+  text-decoration-line: underline;
+}
+
+.theme_light .accent_link:focus {
+  outline: 1px solid var(--accent-color-light-theme);
+}
+
+.theme_light .header__decorations::after {
+  content: "";
+}
+
+.theme_light .header__decorations::before {
+  content: "";
+  width: 0;
+  height: 0;
+  border: none;
+  filter: none;
+}
+
+.theme_light .header::before {
+  border-top: 1px solid var(--accent-color-light-theme);
+  border-right: 1px solid var(--accent-color-light-theme);
+}
+
+.theme_light .header::after {
+  border-bottom: 1px solid var(--accent-color-light-theme);
+  border-left: 1px solid var(--accent-color-light-theme);
+}
+
+.theme_light .footer::before {
+  border-top: 1px solid var(--accent-color-light-theme);
+  border-right: 1px solid var(--accent-color-light-theme);
+}
+
+.theme_light .footer::after {
+  border-bottom: 1px solid var(--accent-color-light-theme);
+  border-left: 1px solid var(--accent-color-light-theme);
+}
+
+.theme_light .header__theme-menu-button:hover {
+  border: 1px solid var(--accent-color-light-theme);
+}
+
+.theme_light .header__theme-menu-button_active {
+  border: 1px solid var(--accent-color-light-theme);
+}
+
+.theme_light .header__theme-menu-button {
+  color: var(--accent-color-light-theme);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #353430;
+    --text-color: #f1b2ce;
+    --accent-text-color: #000028;
+    --accent-color-light-theme: #353430;
+    --accent-color: #ff8dcb;
+    --accent-color-title: #ffc2e6;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom: 1px solid var(--accent-color-light-theme);
+    outline: none;
+  }
+
+  h3.title-decor {
+    color: var(--accent-color-light-theme);
+    background-color: transparent;
+  }
+
+  p.title-decor {
+    color: var(--accent-color-light-theme);
+    font-weight: var(--main-font-weight);
+  }
+
+  .accent_link {
+    text-decoration: none;
+    text-shadow: 2px 2px 0px var(--accent-color);
+  }
+
+  .accent_link:hover {
+    text-decoration-line: underline;
+  }
+
+  .accent_link:focus {
+    outline: 1px solid var(--accent-color-light-theme);
+  }
+
+  .header__decorations::after {
+    content: "";
+  }
+
+  .header__decorations::before {
+    content: "";
+    width: 0;
+    height: 0;
+    border: none;
+    filter: none;
+  }
+
+  .header::before {
+    border-top: 1px solid var(--accent-color-light-theme);
+    border-right: 1px solid var(--accent-color-light-theme);
+  }
+
+  .header::after {
+    border-bottom: 1px solid var(--accent-color-light-theme);
+    border-left: 1px solid var(--accent-color-light-theme);
+  }
+
+  .footer::before {
+    border-top: 1px solid var(--accent-color-light-theme);
+    border-right: 1px solid var(--accent-color-light-theme);
+  }
+
+  .footer::after {
+    border-bottom: 1px solid var(--accent-color-light-theme);
+    border-left: 1px solid var(--accent-color-light-theme);
+  }
+
+  .header__theme-menu-button:hover {
+    border: 1px solid var(--accent-color-light-theme);
+  }
+
+  .header__theme-menu-button_active {
+    border: 1px solid var(--accent-color-light-theme);
+  }
+
+  .header__theme-menu-button {
+    color: var(--accent-color-light-theme);
+  }
 }
