--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,96 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --text-color: #f1b2ce;
+  --accent-text-color: #000028;
+  --accent-color: #ff0070;
+  --accent-color-title: #db00ff;
+  --main-font: "IBM Plex Mono";
+  --main-font-weight: 400;
+  --accent-font-weight: 700;
+  --font-size: 18px;
+  background-image: url(../images/cover-image-dark.png);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.theme_dark h3.title-decor {
+  color: var(--accent-color);
+  background-color: transparent;
+}
+
+.theme_dark p.title-decor {
+  color: var(--text-color);
+  font-weight: var(--main-font-weight);
+}
+
+.theme_dark .accent_link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.theme_dark .accent_link:hover {
+  text-decoration-line: underline;
+}
+
+.theme_dark .accent_link:focus {
+  outline: 1px solid var(--accent-color);
+}
+
+.theme_dark .header__decorations::after {
+  content: "REC";
+  position: absolute;
+  top: 21px;
+  right: 48px;
+  line-height: 25px;
+  text-align: center;
+}
+
+.theme_dark .header__decorations::before {
+  content: "";
+  position: absolute;
+  top: 28px;
+  right: 29px;
+  width: 10px;
+  height: 10px;
+  border: 1px solid var(--accent-color);
+  border-radius: 50%;
+  background: var(--accent-color);
+  filter: blur(1px);
+}
+
+.theme_dark .header::before {
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.theme_dark .header::after {
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.theme_dark .footer::before {
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.theme_dark .footer::after {
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.theme_dark .header__theme-menu-button:hover {
+  border: 1px solid var(--accent-color);
+}
+
+.theme_dark .header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+}
+
+.theme_dark .header__theme-menu-button {
+  color: var(--accent-color);
 }
