--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,521 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  font-family: var(--main-font);
+  font-weight: var(--main-font-weight);
+  font-size: var(--font-size);
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-color: var(--bg-color);
+  background-image: url(../images/cover-image-dark.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/* .cover {
+  inline-size: 100%;
+  background-image: url(../images/cover-image-dark.png);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+} */
+
+.title-decor {
+  color: var(--accent-text-color);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--font-size);
+}
+
+h2.title-decor {
+  /* display: inline-block; */
+  background-color: var(--accent-color);
+}
+
+h3.title-decor {
+  color: var(--accent-color-dark-theme);
+  background-color: transparent;
+}
+
+p.title-decor {
+  color: var(--text-color);
+  font-weight: var(--main-font-weight);
+}
+
+.accent-title-decor {
+  color: var(--accent-color-title);
+  font-weight: var(--accent-font-weight);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 82.5%;
+  text-shadow: 4px 4px 0px var(--accent-color);
+}
+
+.decorations-accent {
+  color: var(--accent-color);
+  line-height: 25px;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows:
+    minmax(min-content, max-content) 2.2fr minmax(min-content, max-content)
+    1fr minmax(min-content, max-content) 1fr;
+  min-block-size: 100vh;
+}
+
+.header::before,
+.header::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+
+.header::before {
+  top: 20px;
+  right: 20px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.header::after {
+  bottom: 20px;
+  left: 20px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.header__decorations::after {
+  content: "REC";
+  position: absolute;
+  top: 21px;
+  right: 48px;
+  line-height: 25px;
+  text-align: center;
+}
+
+.header__decorations::before {
+  content: "";
+  position: absolute;
+  top: 28px;
+  right: 29px;
+  width: 10px;
+  height: 10px;
+  border: 1px solid var(--accent-color);
+  border-radius: 50%;
+  background: var(--accent-color);
+  filter: blur(1px);
+}
+.header__theme-menu-button {
+  border: none;
+  color: var(--accent-color);
+  font-family: var(--main-font);
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.accent_link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.accent_link:hover {
+  text-decoration-line: underline;
+}
+
+.accent_link:focus {
+  outline: 1px solid var(--text-color);
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid #ff0070;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid #ff0070;
+  pointer-events: none;
+}
+
+.header__theme-menu {
+  display: grid;
+  grid-column: span 2;
+  grid-row: 1;
+  justify-content: center;
+  align-content: start;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.header__title {
+  grid-column: span 2;
+  grid-row: 3;
+}
+
+.header__text {
+  display: grid;
+  grid-column: 2;
+  grid-row: 5;
+  justify-content: end;
+  margin-right: 20px;
+  line-height: 23.4px; /* 130% */
+  background-color: var(--accent-color);
+}
+
+.header__theme-menu-button {
+  height: 26px;
+  padding: 0 13px;
+  text-transform: lowercase;
+}
+
+.content__why {
+  padding: 60px 20px 80px;
+}
+
+.content__why-text {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  gap: 20px;
+  line-height: 23.4px;
+}
+
+.content__why-text h3 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.content__why-card {
+  /* grid-column: span 2; */
+  display: grid;
+  grid-area: 1 / 2 / 2 / 4;
+  gap: 20px;
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+.content__what-card-text {
+  display: grid;
+  gap: 20px;
+  padding: 0 20px 80px;
+  line-height: 23.4px; /* 130% */
+  grid-template: repeat(2, minmax(min-content, max-content)) / repeat(3, 1fr);
+}
+
+.content__what-card-text .content__title {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.content__what-card {
+  display: grid;
+  grid-area: 2 / 1 / 3 / 4;
+  gap: 20px;
+  grid-template: 1fr / repeat(3, 1fr);
+}
+
+.content__how-card-text {
+  display: grid;
+  gap: 20px;
+  padding: 0 20px 80px;
+  line-height: 23.4px; /* 130% */
+  grid-template: repeat(2, minmax(min-content, max-content)) / repeat(3, 1fr);
+}
+
+.content__how-card-text h3 {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.content__how-card-text h2 {
+  grid-area: 1 / 2 / 2 / 4;
+  margin: 0;
+}
+
+.content__how-card {
+  display: grid;
+  grid-area: 2 / 2 / 3 / 4;
+  gap: 20px;
+  line-height: 23.4px; /* 130% */
+}
+
+.content__how-card-list .content__how-title {
+  margin-bottom: 10px;
+}
+
+.content__how-title:not(.title-decor-selection) {
+  font-weight: var(--main-font-weight);
+}
+
+.gallery {
+  display: grid;
+  justify-items: stretch;
+  align-items: stretch;
+  gap: 20px;
+  padding: 0 20px 60px;
+  grid-template: repeat(4, minmax(min-content, max-content)) / repeat(3, 1fr);
+}
+
+.gallery__picture {
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.gallery-title {
+  grid-area: 1/1/2/4;
+}
+
+.sunset-img {
+  grid-area: 2/1/3/3;
+}
+.ice-cream-img {
+  grid-area: 2/3/4/4;
+}
+.tape-img {
+  grid-area: 3/1/5/2;
+}
+
+.books-img {
+  grid-area: 3/2/4/3;
+}
+.street-img {
+  grid-area: 4/2/5/4;
+}
+
+h2.gallery-title {
+  margin: 0;
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  min-block-size: 100vh;
+}
+
+.footer::before,
+.footer::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+
+.footer::before {
+  top: 20px;
+  right: 20px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.footer::after {
+  bottom: 20px;
+  left: 20px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+@media (376px <= width <= 768px) {
+  .header__theme-menu {
+    grid-area: 2/2/3/3;
+    justify-content: end;
+    align-content: center;
+  }
+
+  .header {
+    grid-template-rows:
+      minmax(min-content, max-content) 2.7fr minmax(min-content, max-content)
+      0.9fr minmax(min-content, max-content) 1fr;
+    min-block-size: 100vh;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+    margin-right: 20px;
+  }
+
+  .content__why-card {
+    margin-left: 7px;
+  }
+
+  .content__how-card {
+    margin-left: 7px;
+  }
+
+  .content__how-card-text .title-decor-selection {
+    margin-left: 7px;
+  }
+
+  .content__what-card {
+    grid-template: repeat(3, max-content) / 1fr;
+  }
+
+  footer .accent-title-decor {
+    text-shadow: 4px 4px 0px var(--accent-color);
+  }
+}
+
+@media (width <= 375px) {
+  .header::before {
+    top: 10px;
+    right: 10px;
+  }
+
+  .header::after {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .header__decorations::after {
+    top: 10px;
+    right: 37px;
+  }
+
+  .header__decorations::before {
+    top: 18px;
+    right: 19px;
+  }
+
+  .header__theme-menu {
+    grid-area: 2/2/3/3;
+    justify-content: end;
+    align-content: center;
+  }
+
+  .header {
+    grid-template-rows:
+      minmax(min-content, max-content) 4.5fr minmax(min-content, max-content)
+      1fr minmax(min-content, max-content) 1.3fr;
+    min-block-size: 100vh;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+
+  .header__text {
+    grid-column: span 2;
+    margin: 0 10px;
+  }
+
+  .header__title {
+    margin: 0 10px;
+  }
+
+  .content__why {
+    padding: 40px 10px 50px;
+  }
+
+  .content__why-text {
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr;
+  }
+
+  .content__why-text h3 {
+    grid-area: 1/1/1/1;
+  }
+
+  .content__why-card {
+    grid-area: 2/1/3/1;
+  }
+
+  h2 {
+    margin-bottom: 10px;
+  }
+
+  .content__what-card-text {
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr;
+    padding: 0 10px 50px;
+  }
+
+  .content__what-card-text .content__title {
+    grid-row: 1;
+  }
+
+  .content__what-card {
+    grid-row: 2;
+    grid-template: 1fr / 1fr;
+  }
+
+  .content__how-card-text {
+    padding: 0 10px 50px;
+    grid-template: repeat(3, minmax(min-content, max-content)) / 1fr;
+  }
+
+  .content__how-card-text h3 {
+    grid-area: 1/1/2/2;
+  }
+
+  .content__how-card-text h2 {
+    grid-area: 2/1/3/2;
+  }
+
+  .content__how-card {
+    grid-area: 3/1/4/2;
+  }
+
+  .gallery {
+    justify-items: stretch;
+    align-items: stretch;
+    gap: 10px;
+    padding: 0 10px 40px;
+    grid-template: repeat(5, minmax(min-content, max-content)) / 1fr;
+  }
+
+  .gallery-title {
+    grid-area: 1/1/2/2;
+  }
+
+  .sunset-img {
+    grid-area: 2/1/3/2;
+  }
+  .ice-cream-img {
+    grid-area: 3/1/4/2;
+  }
+  .tape-img {
+    grid-area: 4/1/5/2;
+  }
+
+  .books-img {
+    grid-area: 5/1/6/2;
+  }
+  .street-img {
+    grid-area: 6/1/7/2;
+  }
+
+  .footer {
+    padding: 10px;
+  }
+
+  .footer::before {
+    top: 10px;
+    right: 10px;
+  }
+
+  .footer::after {
+    bottom: 10px;
+    left: 10px;
+  }
 }
