--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,15 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --bg-color: #000028;
+  --text-color: #f1b2ce;
+  --accent-text-color: #000028;
+  --accent-color: #ff0070;
+  --accent-color-dark-theme: #ff0070;
+  --accent-color-title: #db00ff;
+  --main-font: "IBM Plex Mono";
+  --main-font-weight: 400;
+  --accent-font-weight: 700;
+  --font-size: 18px;
+}
