--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,6 +15,10 @@
   --accent-font-weight: 700;
   --font-size: 18px;
   background-image: url(../images/cover-image-dark.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -27,7 +31,7 @@ h3.title-decor.theme_dark {
   background-color: transparent;
 }
 
-p.title-decor.theme_dark  {
+p.title-decor.theme_dark {
   color: var(--text-color);
   font-weight: var(--main-font-weight);
 }
