--- a/styles/light.css
+++ b/styles/light.css
@@ -12,6 +12,10 @@
   --accent-color: #ff8dcb;
   --accent-color-title: #ffc2e6;
   background-image: url(../images/cover-image-light.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .header__theme-menu-button:focus-visible {
