--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,9 +4,12 @@
 */
 :root {
   --bg-color: #000028;
-  --text-color: #f1b2ce;
-  --accent-text-color: #000028;
   --accent-color: #ff0070;
+  --accent-text-color: #000028;
+  --accent-text-color-title: #ff0070;
+  --text-color: #f1b2ce;
+  --button-hover-color: rgba(50, 49, 45, 0.40);
+
   --accent-color-dark-theme: #ff0070;
   --accent-color-title: #db00ff;
   --main-font: "IBM Plex Mono";
