--- a/styles/light.css
+++ b/styles/light.css
@@ -5,44 +5,42 @@
 */
 
 .theme_light.page {
-  --bg-color: #FFF1F7;
+  --bg-color: #fff1f7;
   --accent-color: #ff8dcb;
   --accent-text-color: #353430;
   --accent-text-color-title: #353430;
   --text-color: #353430;
   --accent-color-light-theme: #353430;
   --accent-color-title: #ffc2e6;
+  --button-hover-color: rgba(50, 49, 45, 0.4);
   background-image: url(../images/cover-image-light.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  --button-hover-color: rgba(50, 49, 45, 0.40);
 }
 
 .theme_light .header__decorations {
   display: none;
 }
 
-
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-color: #FFF1F7;
+    --bg-color: #fff1f7;
     --accent-color: #ff8dcb;
     --accent-text-color: #353430;
     --accent-text-color-title: #353430;
     --text-color: #353430;
     --accent-color-light-theme: #353430;
     --accent-color-title: #ffc2e6;
-    --button-hover-color: rgba(50, 49, 45, 0.40);
+    --button-hover-color: rgba(50, 49, 45, 0.4);
   }
 
-.page {
-  background-image: url(../images/cover-image-light.png);
-}
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
 
-.header__decorations {
-  display: none;
-}
-
+  .header__decorations {
+    display: none;
+  }
 }
