--- a/styles/style.css
+++ b/styles/style.css
@@ -15,38 +15,36 @@
 
 /* * { outline: 1px solid yellow; } */
 
-
 .title-decor {
   font-weight: var(--main-font-weight);
   font-size: var(--font-size);
 }
 
 p.header__text.title-decor {
-  background-color: var(--accent-color);
-  font-weight: var(--accent-font-weight);
   color: var(--accent-text-color);
+  font-weight: var(--accent-font-weight);
+  background-color: var(--accent-color);
 }
 
 h2.title-decor {
-  background-color: transparent;
-  font-weight: var(--accent-font-weight);
   color: var(--accent-text-color-title);
+  font-weight: var(--accent-font-weight);
+  background-color: transparent;
 }
 
 h3.title-decor {
-  background-color: var(--accent-color);
-  font-weight: var(--accent-font-weight);
-  color: var(--accent-text-color);
   margin-bottom: 10px;
+  color: var(--accent-text-color);
+  font-weight: var(--accent-font-weight);
+  background-color: var(--accent-color);
 }
 
 h4.title-decor {
-  background-color: var(--accent-color);
-  font-weight: var(--main-font-weight);
-  color: var(--accent-text-color);
   margin-bottom: 10px;
+  color: var(--accent-text-color);
+  font-weight: var(--main-font-weight);
+  background-color: var(--accent-color);
 }
-
 
 /* p.title-decor {
   color: var(--text-color);
@@ -77,14 +75,13 @@ h4.title-decor {
   min-height: 100vh;
 }
 
-
 .header::before {
   content: "";
   position: absolute;
-  width: 25px;
-  height: 25px;
   top: 20px;
   right: 20px;
+  width: 25px;
+  height: 25px;
   border-top: 1px solid var(--accent-text-color-title);
   border-right: 1px solid var(--accent-text-color-title);
 }
@@ -92,18 +89,18 @@ h4.title-decor {
 .header::after {
   content: "";
   position: absolute;
-  width: 25px;
-  height: 25px;
   bottom: 20px;
   left: 20px;
+  width: 25px;
+  height: 25px;
   border-bottom: 1px solid var(--accent-text-color-title);
   border-left: 1px solid var(--accent-text-color-title);
 }
 
 p {
-  color: var(--text-color);
   margin-bottom: 20px;
-  line-height: 23.4px; 
+  color: var(--text-color);
+  line-height: 23.4px;
 }
 
 .header__decorations::after {
@@ -124,19 +121,19 @@ p {
   height: 10px;
   border: 1px solid var(--accent-text-color-titler);
   border-radius: 50%;
-  background: var(--accent-text-color-title);
   box-shadow: 0 0 4px 2px var(--accent-text-color-title);
+  background: var(--accent-text-color-title);
 }
 
 .header__theme-menu-button {
+  height: 26px;
   border: none;
+  padding: 0 13px;
   color: var(--accent-text-color-title);
   font-family: var(--main-font, monospace);
+  text-transform: lowercase;
   background-color: transparent;
   cursor: pointer;
-  height: 26px;
-  padding: 0 13px;
-  text-transform: lowercase;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -150,8 +147,8 @@ p {
 }
 
 .accent_link:hover {
-  text-decoration: none;
   border-bottom: 1px solid var(--text-color);
+  text-decoration: none;
 }
 
 .accent_link:focus {
@@ -290,21 +287,24 @@ p {
   align-items: stretch;
   gap: 20px;
   padding: 0 20px 60px;
-  grid-template: repeat(4, minmax(min-content, max-content)) / repeat(auto-fit, 1fr);
+  grid-template: repeat(4, minmax(min-content, max-content)) / repeat(
+      auto-fit,
+      1fr
+    );
 }
 
 .gallery__picture {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
-  height: 100%;
-  width: 100%;
 }
 
 h2.gallery-title {
   grid-area: 1/1/2/4;
-  background-color: var(--accent-color);
-  font-weight: var(--accent-font-weight);
   color: var(--accent-text-color);
+  font-weight: var(--accent-font-weight);
+  background-color: var(--accent-color);
 }
 
 .sunset-img {
@@ -333,19 +333,18 @@ p.gallery-title {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
   /* min-block-size: 100vh; */
   min-height: 100vh;
+  padding: 20px;
 }
-
 
 .footer::before {
   content: "";
   position: absolute;
-  width: 25px;
-  height: 25px;
   top: 20px;
   right: 20px;
+  width: 25px;
+  height: 25px;
   border-top: 1px solid var(--accent-text-color-title);
   border-right: 1px solid var(--accent-text-color-title);
 }
@@ -353,10 +352,10 @@ p.gallery-title {
 .footer::after {
   content: "";
   position: absolute;
-  width: 25px;
-  height: 25px;
   bottom: 20px;
   left: 20px;
+  width: 25px;
+  height: 25px;
   border-bottom: 1px solid var(--accent-text-color-title);
   border-left: 1px solid var(--accent-text-color-title);
 }
@@ -405,7 +404,7 @@ p.gallery-title {
 
   .content__what-card {
     gap: 0;
-}
+  }
 }
 
 @media (width <= 375px) {
@@ -474,9 +473,8 @@ p.gallery-title {
 
   .content__why-card {
     grid-area: 2/1/3/1;
-
   }
-  
+
   p {
     margin-bottom: 20px;
   }
@@ -493,8 +491,8 @@ p.gallery-title {
 
   .content__what-card {
     grid-row: 2;
-    grid-template: 1fr / 1fr;
     gap: 0;
+    grid-template: 1fr / 1fr;
   }
 
   .content__how-card-text {
@@ -556,8 +554,4 @@ p.gallery-title {
     bottom: 10px;
     left: 10px;
   }
-
-  
 }
-
-
