--- a/styles/dark.css
+++ b/styles/dark.css
@@ -22,3 +22,20 @@
 .theme_dark .header__decorations {
   display: block;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000028;
+    --accent-color: #ff0070;
+    --accent-text-color: #000028;
+    --accent-text-color-title: #ff0070;
+    --text-color: #f1b2ce;
+    --accent-color-dark-theme: #ff0070;
+    --accent-color-title: #db00ff;
+    --button-hover-color: rgba(255, 0, 112, 0.4);
+  }
+
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+  }
+}
